docs/versions/4.21/groups/M18.md
---
layout: group
group_id: M18
version: "4.21"
---

> **Remediation required.** This group (4 checks) fails on vanilla RHCOS 9.8 and requires MachineConfig remediation. Verified on cnfdt16 (OCP 4.22, RHCOS 9.8) with compliance-operator v1.8.2.

## Overview

Audits session lifecycle events, Mandatory Access Control (MAC) policy modifications, media export operations, and makes audit rules immutable after loading to prevent tampering.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `session-events` | Audit user session open/close events |
| `mac-modification` | Audit SELinux/MAC policy changes |
| `media-export` | Audit removable media mount operations |
| `immutable` | Make audit rules immutable (requires reboot to change) |

## Verification

```bash
oc debug node/<node> -- chroot /host auditctl -l | grep -E 'session|MAC|mount|immutable'
```
