docs/versions/4.22/groups/M18.md
---
layout: group
group_id: M18
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

Audits session lifecycle events, Mandatory Access Control (MAC) policy modifications, media export operations, and makes audit rules immutable after loading to prevent tampering.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `session-events` | Audit user session open/close events |
| `mac-modification` | Audit SELinux/MAC policy changes |
| `media-export` | Audit removable media mount operations |
| `immutable` | Make audit rules immutable (requires reboot to change) |

## Verification

```bash
oc debug node/<node> -- chroot /host auditctl -l | grep -E 'session|MAC|mount|immutable'
```
